--- a/portal/index.html
+++ b/portal/index.html
@@ -18,8 +18,8 @@
         </br>
         <p>choose the webpage you need</p>
         <ul>
-            <li><a href="localhost/omv">Open Media Vault </a></li>
-            <li><a href="localhost/sr">Sickrage</a></li>
+            <li><a href="/omv">Open Media Vault </a></li>
+            <li><a href="/sr">Sickrage</a></li>
         </ul>
     </body>
 </html>
